--- a/index.html
+++ b/index.html
@@ -2,21 +2,42 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>Chainsaw Man Fanpage</title>
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
   </head>
+
   <body>
+
     <header>
-      <<img src="" alt="">
+
+     <div class="logo">
+      <<img src="https://github.com/GustavoAvila646/Projetin2.0/blob/main/Logo_CM.png?raw=true" alt="">
+      </div>
+
+      <div class="titulo">
+  Chainsaw Man Fanpage
+</div>
+
       <nav>
         <ul>
-          <li><a href="index.html">teste</a></li>
-          <li><a href="contato.html">contato</a></li>
-          <li><a href="fotos.html">fotos</a></li>
+          <li><a href="index.html">home</a></li>
+          <li><a href="contato.html">sinopse</a></li>
+          <li><a href="fotos.html">trailer</a></li>
         </ul>
      </nav>
   </header>
+
+  <div class="texto">
+         <h1>Chainsaw Man é um mangá japonês escrito e ilustrado por Tatsuki Fujimoto. Ele foi publicado na "Shueisha 's Weekly Shonen Jump" de dezembro de 2018 até Dezembro de 2020, com seus capítulos coletados em doze volumes</h1>
+         <p>Novos episódios toda terça-feira às 14:00 (horário de Brasília)</p>
+      </div>
+
+
+      <img src="https://github.com/GustavoAvila646/Projetin2.0/blob/main/chainsawman_imagem_capa.jpeg?raw=true" alt="">
+
+         <p>Assista já pela Crunchyroll</p>
+
 
   </body>
 </html>
